--- a/devbuddy/requirements.txt
+++ b/devbuddy/requirements.txt
@@ -8,6 +8,7 @@ Deprecated==1.2.13
 Django==4.2
 django-cors-headers==3.14.0
 django-rest-framework==0.1.0
+django-sse==0.4.1
 djangorestframework==3.14.0
 gunicorn==20.1.0
 idna==3.4
